ТЗ-2. Итерация 1. Произведет рефакторинг. Добавлена возможность ставить лайки к фильмам и добавление в друзья
